# aisdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.sh
.github/workflows/: ci.yml  release.yml
examples/git-summary/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test_tools.rs
scripts/: README.md  gen_capabilities.py  provider-codegen.py
src/: error.rs  lib.rs  prompt.rs
src/core/: capabilities.rs  client.rs  messages.rs  mod.rs  tools.rs  utils.rs
src/core/embedding_model/: mod.rs  request.rs
src/core/language_model/: generate_text.rs  mod.rs  request.rs  stream_text.rs
src/integrations/: axum.rs  mod.rs  vercel_aisdk_ui.rs
src/providers/: mod.rs
src/providers/302ai/: capabilities.rs  mod.rs
src/providers/abacus/: capabilities.rs  mod.rs
src/providers/aihubmix/: capabilities.rs  mod.rs
src/providers/alibaba/: capabilities.rs  mod.rs
src/providers/alibaba-cn/: capabilities.rs  mod.rs
src/providers/amazon_bedrock/: capabilities.rs  language_model.rs  mod.rs  settings.rs
src/providers/anthropic/: capabilities.rs  client.rs  conversions.rs  extensions.rs  langauge_model.rs  language_model.rs  mod.rs  settings.rs
src/providers/bailing/: capabilities.rs  mod.rs
src/providers/baseten/: capabilities.rs  mod.rs
src/providers/chutes/: capabilities.rs  mod.rs
src/providers/cloudflare-ai-gateway/: capabilities.rs  mod.rs
src/providers/cortecs/: capabilities.rs  mod.rs
src/providers/deepseek/: capabilities.rs  language_model.rs  mod.rs  settings.rs
src/providers/fastrouter/: capabilities.rs  mod.rs
src/providers/fireworks-ai/: capabilities.rs  mod.rs
src/providers/firmware/: capabilities.rs  mod.rs
src/providers/friendli/: capabilities.rs  mod.rs
src/providers/github-copilot/: capabilities.rs  mod.rs
src/providers/github-models/: capabilities.rs  mod.rs
src/providers/google/: capabilities.rs  conversions.rs  embedding_model.rs  extensions.rs  language_model.rs  mod.rs  settings.rs
src/providers/groq/: capabilities.rs  language_model.rs  mod.rs  settings.rs
src/providers/helicone/: capabilities.rs  mod.rs
src/providers/huggingface/: capabilities.rs  mod.rs
src/providers/iflowcn/: capabilities.rs  mod.rs
src/providers/inception/: capabilities.rs  mod.rs
src/providers/inference/: capabilities.rs  mod.rs
src/providers/io-net/: capabilities.rs  mod.rs
src/providers/llama/: capabilities.rs  mod.rs
src/providers/lmstudio/: capabilities.rs  mod.rs
src/providers/lucidquery/: capabilities.rs  mod.rs
src/providers/moark/: capabilities.rs  mod.rs
src/providers/modelscope/: capabilities.rs  mod.rs
src/providers/moonshotai/: capabilities.rs  mod.rs
src/providers/moonshotai-cn/: capabilities.rs  mod.rs
src/providers/morph/: capabilities.rs  mod.rs
src/providers/nano-gpt/: capabilities.rs  mod.rs
src/providers/nebius/: capabilities.rs  mod.rs
src/providers/nova/: capabilities.rs  mod.rs
src/providers/novita-ai/: capabilities.rs  mod.rs
src/providers/nvidia/: capabilities.rs  mod.rs
tests/provider/: amazon_bedrock_tests.rs  anthropic_tests.rs  deepseek_tests.rs  google_tests.rs  groq_tests.rs  macros.rs  openai_compatible_tests.rs  openai_tests.rs  openrouter_tests.rs  togetherai_tests.rs  vercel_tests.rs  xai_tests.rs
(+82 files in other folders)
