[package]
name = "aisdk"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "An open-source Rust library for building AI-powered applications, inspired by the Vercel AI SDK. It provides a robust, type-safe, and easy-to-use interface for interacting with various Large Language Models (LLMs)."
homepage = "https://github.com/lazy-hq/aisdk"
repository = "https://github.com/lazy-hq/aisdk"
readme = "README.md"
keywords = ["ai", "sdk", "aisdk", "ai-sdk-rs", "openai"]
categories = ["api-bindings", "asynchronous"]

[features]
full = ["prompt", "openai", "anthropic", "groq"]
openai = ["async-openai"]
anthropic = ["reqwest"]
groq = ["openai"]
prompt = ["tera", "glob"]
test-access = []

[dependencies]
tera = { version = "1", optional = true }
glob = { version = "0.3", optional = true }
log = "0.4"
async-trait = "0.1.88"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0" }
schemars = "1.0.4"
thiserror = "2.0.12"
derive_builder = "0.20.2"
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
aisdk-macros = { version = "0.2.0", path = "./macros" }
async-openai = { version = "0.29.3", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
dotenv = "0.15.0"
tokio = { version = "1.46.1", features = ["full"]}
tempfile = "3.10.1"

[package.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/lazy-hq/aisdk/compare/{{tag_name}}...HEAD", exactly=1},
]

[[test]]
name = "openai_tests"
path = "tests/provider/openai_tests.rs"
required-features = ["openai", "test-access"]

[[test]]
name = "anthropic_tests"
path = "tests/provider/anthropic_tests.rs"
required-features = ["anthropic", "test-access"]

[[test]]
name = "groq_tests"
path = "tests/provider/groq_tests.rs"
required-features = ["groq", "test-access"]
