[package]
name = "aisdk-macros"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Procedural macros for the aisdk library"
homepage = "https://github.com/lazy-hq/aisdk"
repository = "https://github.com/lazy-hq/aisdk"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
serde = {version = "1.0.219", features = ["derive"]}
schemars = "1.0.4"
aisdk = {path = "..", version = "0.2.1"}

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["full"]}

[[test]]
name = "test_tools"
path = "tests/test_tools.rs"
